Fixed a Bug Where Spindash would float in mid-air, Added Super Sonic Icon Plus Cleaned up some other warnings